logs/django-survey.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_survey-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/examples/management'...
Listing './lib/python3.5/site-packages/examples/management/commands'...
Listing './lib/python3.5/site-packages/examples/site_media'...
Listing './lib/python3.5/site-packages/examples/site_media/survey'...
Listing './lib/python3.5/site-packages/examples/site_media/survey/images'...
Listing './lib/python3.5/site-packages/examples/site_media/survey/images/questions'...
Listing './lib/python3.5/site-packages/examples/site_media/survey/images/questions/2008'...
Listing './lib/python3.5/site-packages/examples/site_media/survey/images/questions/2008/10'...
Listing './lib/python3.5/site-packages/examples/templates'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/survey'...
Listing './lib/python3.5/site-packages/survey/fixtures'...
Compiling './lib/python3.5/site-packages/survey/forms.py'...
***   File "./lib/python3.5/site-packages/survey/forms.py", line 66
    raise ValidationError, _('This field is required.')
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/survey/locale'...
Listing './lib/python3.5/site-packages/survey/locale/en'...
Listing './lib/python3.5/site-packages/survey/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/survey/locale/es'...
Listing './lib/python3.5/site-packages/survey/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/survey/locale/fr'...
Listing './lib/python3.5/site-packages/survey/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/survey/templates'...
Listing './lib/python3.5/site-packages/survey/templates/admin'...
Listing './lib/python3.5/site-packages/survey/templates/admin/survey'...
Listing './lib/python3.5/site-packages/survey/templates/admin/survey/choice'...
Listing './lib/python3.5/site-packages/survey/templates/admin/survey/question'...
Listing './lib/python3.5/site-packages/survey/templates/admin/survey/survey'...
Listing './lib/python3.5/site-packages/survey/templates/forms'...
Listing './lib/python3.5/site-packages/survey/templates/survey'...
Listing './lib/python3.5/site-packages/survey/templates/survey/includes'...
Listing './lib/python3.5/site-packages/survey/templates/test'...
Listing './lib/python3.5/site-packages/survey/templatetags'...
Listing './share'...
Listing './share/python-wheels'...
